# vibereport

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.claude/skills/value-realization/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
.wrangler/cache/: wrangler-account.json
docs/: POSTS.md
docs/plans/: 2026-02-19-vibereport-mvp.md  2026-02-21-frontend-redesign-implementation.md  2026-02-21-frontend-redesign.md  2026-02-21-github-ai-index-design.md  2026-02-21-github-ai-index-implementation.md  2026-02-21-implementation-plan.md  2026-02-21-ux-redesign-vps-worker.md  2026-02-21-vps-scan-worker.md
scripts/: generate-panel.sh
src/: main.rs
src/git/: ai_detect.rs  mod.rs  parser.rs  timeline.rs
src/project/: deps.rs  languages.rs  mod.rs  security.rs  tests_detect.rs  vibe_detect.rs
src/render/: mod.rs  svg.rs  terminal.rs
src/scanner/: discover.rs  mod.rs  multi_report.rs  remote.rs
src/score/: calculator.rs  mod.rs  roast.rs
src/share/: upload.rs
vps-worker/: Cargo.toml
vps-worker/src/: main.rs
web/api/: package-lock.json  package.json  schema.sql  tsconfig.json  wrangler.toml
web/api/src/: index.ts  schema.sql
web/frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  vercel.json
web/frontend/public/: install.ps1  install.sh  robots.txt
web/frontend/src/components/: BattleChart.astro  LatestScans.astro  LeaderboardTable.astro  ReportCard.astro  StatsCounter.astro  TrendChart.astro
web/frontend/src/layouts/: Base.astro
web/frontend/src/lib/: api.ts
web/frontend/src/pages/: 404.astro  community.astro  docs.astro  github-index.astro  index.astro  leaderboard.astro  privacy.astro  report.astro  reports.astro  scan.astro  trends.astro
web/frontend/src/pages/api/: og.ts
web/frontend/src/pages/r/: [id].astro
