[workspace]
members = [".", "vps-worker"]

[package]
name = "vibereport"
version = "1.0.0"
edition = "2021"
description = "How much of your code is AI-generated? Scan any git repo to detect AI coding tools and get your vibe score."
license = "MIT"
repository = "https://github.com/monkeycs60/vibereport"
homepage = "https://vibereport.dev"
keywords = ["ai", "git", "vibe-coding", "code-analysis", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["web/", "vps-worker/", "docs/", "scripts/", ".github/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
gix = { version = "0.72", default-features = false, features = ["max-performance-safe"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
owo-colors = "4"
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["share"]
share = ["reqwest"]

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
